crates/fj-conformance/tests/snapshots/value_serialization_snapshots__snapshot_scalar_f64.snap
---
source: crates/fj-conformance/tests/value_serialization_snapshots.rs
assertion_line: 17
expression: json
---
{
  "Scalar": {
    "F64Bits": 4614320624209399644
  }
}
