crates/fj-conformance/tests/snapshots/value_serialization_snapshots__snapshot_tensor_1d_f64.snap
---
source: crates/fj-conformance/tests/value_serialization_snapshots.rs
expression: json
---
{
  "Tensor": {
    "dtype": "F64",
    "shape": {
      "dims": [
        3
      ]
    },
    "elements": [
      {
        "F64Bits": 4607182418800017408
      },
      {
        "F64Bits": 4611686018427387904
      },
      {
        "F64Bits": 4613937818241073152
      }
    ]
  }
}
