crates/fj-conformance/tests/snapshots/value_serialization_snapshots__snapshot_tensor_scalar_shape.snap
---
source: crates/fj-conformance/tests/value_serialization_snapshots.rs
expression: json
---
{
  "Tensor": {
    "dtype": "F32",
    "shape": {
      "dims": []
    },
    "elements": [
      {
        "F32Bits": 1069547520
      }
    ]
  }
}
