crates/fj-conformance/tests/snapshots/value_serialization_snapshots__snapshot_tensor_special_f64.snap
---
source: crates/fj-conformance/tests/value_serialization_snapshots.rs
expression: json
---
{
  "Tensor": {
    "dtype": "F64",
    "shape": {
      "dims": [
        3
      ]
    },
    "elements": [
      {
        "F64Bits": 9218868437227405312
      },
      {
        "F64Bits": 18442240474082181120
      },
      {
        "F64Bits": 9221120237041090560
      }
    ]
  }
}
